vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-service
  labels:
    app: vaultwarden
spec:
  ports:
    - port: 443
      targetPort: 80
  selector:
    app: vaultwarden
  type: ClusterIP
